# otus-cpp-basics-hw

./: .gitignore  CMakeLists.txt  README.md  build_hello.bat  hello_world.cpp  move_me_out.cpp  move_me_out.h
inc/: CRC32.hpp  container.h  continuous.h  linked_doubly.h  linked_singly.h  statistics.hpp
src/: CRC32.cpp  IO.cpp  guess_the_number.cpp  main.cpp  statistics.cpp  topk_words.cpp
stat/: guess_high_scores.txt  guess_high_scores_duplicates.txt
tests/: test_linked_list.cpp  test_main.cpp  test_vector.cpp
tools/: karenina.txt  launch.json  prt_table.txt  prt_table_patched.txt  the_double.txt
